<resources>
    <string name="app_name">Recruito</string>
    <string name="greeting">Greetings!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="name_hint">Enter Name</string>
    <string name="email">Email</string>
    <string name="email_hint">ex: ***@***.***</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="date_hint">yyyy-mm-dd</string>
    <string name="gender">GENDER</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="phone_number_hint">Enter number</string>
    <string name="status">STATUS</string>
    <string name="next">NEXT</string>
    <string name="profile">Profile</string>
    <string name="details">Details</string>
    <string name="change_profile">CHANGE PROFILE</string>
    <string name="log_out">LOG OUT</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="add_job_list">Add Job List</string>
    <string name="job_title">Job Title</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="job_description">Job Description</string>
    <string name="total_people">Total People</string>
    <string name="job_category">Job Category</string>
    <string name="submit">SUBMIT</string>
    <string name="notification">Notification</string>
    <string name="add_profile_detail">PLEASE FILL UP YOUR\nPERSONAL INFORMATION</string>
    <string name="change_profile_title">Change Profile</string>
    <string name="current_password">Current Password</string>
    <string name="current_password_hint">Enter current password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_hint">Enter new Password</string>
    <string name="confirm">Confirm</string>
    <string name="filter">Filter</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="people_range">People Range</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="history">History</string>
</resources>
