<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:padding="20dp"
    android:background="@android:color/background_light">

    <LinearLayout
        android:id="@+id/linear_layout_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_password"
            android:textSize="25sp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/edit_text_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password_hint"
            android:background="@drawable/edittext_box"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textSize="25sp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/edit_text_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password_hint"
            android:background="@drawable/edittext_box"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_confirmation"
            android:textSize="25sp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/edit_text_new_password_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password_hint"
            android:background="@drawable/edittext_box"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_confirm_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_below="@id/linear_layout_form"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:background="@drawable/button_blue_box"/>

</RelativeLayout>