<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_title"
            android:gravity="center_vertical"
            android:text="@string/filter"
            android:textColor="@android:color/black"
            android:textSize="30dp" />

        <LinearLayout
            android:id="@+id/linear_layout_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/activity_title"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/location"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/spinner_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/time"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_time_picker_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_blue_box"
                    android:elevation="40dp"
                    android:text="Open Time Picker"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:text="-"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_time_picker_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_blue_box"
                    android:elevation="40dp"
                    android:text="Open Time Picker"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:textSize="10sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_view_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edittext_box"
                android:drawableRight="@drawable/ic_date_range_grey_24dp"
                android:hint="@string/date_hint" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/category"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/spinner_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/people_range"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edit_text_total_people"
                style="@style/EditTextBoxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="numberSigned"
                tools:text="999" />


        </LinearLayout>

        <Button
            android:layout_below="@id/linear_layout_form"
            android:id="@+id/button_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/button_blue_box"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/apply" />

    </RelativeLayout>

</ScrollView>