<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:padding="20dp"
        tools:context=".LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear_layout_sign_in_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="50dp"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/email"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/edittext_box"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/password"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/edittext_box"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

            </LinearLayout>

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_layout_sign_in_form"
                android:layout_centerHorizontal="true"
                android:layout_margin="30dp"
                android:background="@drawable/button_pink_round"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@android:color/black" />

        </RelativeLayout>

    </ScrollView>

</layout>
